# VScode_Memory_Manager

./: CMakeLists.txt  Connection.cpp  Connection.h  MemoryManager.cpp  MemoryManager.h  VSPtr.h  calc.cpp  calc.h  main.cpp  test
Garbage Collector/: GCPtr.cpp  GCPtr.h  LinkedListGC.cpp  LinkedListGC.h
client/: Client.cpp  Client.h  ClientManagerJSON.cpp  ClientManagerJSON.h
server/: Server.cpp  Server.h  ServerManagerJSON.cpp  ServerManagerJSON.h
tests/: test.cpp
vsptr/: VSPtr.cpp  VSPtr.h
